--- a/user/templates/user/email_template.html
+++ b/user/templates/user/email_template.html
@@ -6,12 +6,23 @@
         <title>이메일 인증 안내</title>
     </head>
     <body style="font-family: Arial, sans-serif; line-height: 1.6; color: #333; background-color: #f4f4f4; margin: 0; padding: 0;">
-        <div style="width: 600px; height: auto; margin: 0 auto; padding: 20px; background-color: #fff; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); background-image: url(https://ifh.cc/g/coY8Tn.png);">
-            <h1 style="display: flex; justify-content: flex-start; padding: 0; border-bottom: 2px solid #eee;">메일 인증 코드</h1>
-            <div style="margin-top: 60px; color: black;"> Mudig에 가입하신 것을 환영합니다 ! <br> 2단계 인증 설정을 위한 코드를 발급하였습니다.</div>
-            <div style="margin-bottom: 20px;">아래의 인증코드를 입력하시면 회원가입이 완료됩니다.</div>
-            <div style= "margin-top: 20px; border-top: 1px solid #eee; padding-top: 10px; text-align: center; background-color: #f5f5f5;">
-            <p style="padding:20px 0; font-size: 29px; font-weight: bold; color: #8969FF; letter-spacing:8px;"> {{ otp }} </p>
+        <div style="width: 700px; height: 740px; margin: 0 auto; padding: 30px; background-color: hsl(0, 0%, 100%); border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
+            <h1 style="display: flex; justify-content: flex-start; padding: 0; border-bottom: 2px solid #eee;"><img src="https://i.ibb.co/WpQdqzP/logo.png" alt="" width="125px" height="45px" style="padding-bottom: 20px;"></h1>
+            <h2 style="display: flex; justify-content: flex-start; padding: 0;">메일 인증 코드</h2>
+            <div style= "margin-top: 20px; border-top: 1px solid #eee; padding-top: 10px; text-align: center; background-color: #F8F6FF;">
+            <p style="padding:20px 0; font-size: 50px; font-weight: 10px; color: #7D4FFF; letter-spacing: 20px;"> {{ otp }} </p>
+            </div>
+            <div style="margin-top: 60px; color: #575757; font-size: medium;"> Mudig에 가입하신 것을 환영합니다 !</div>
+            <div style="color:#575757; font-size: medium;">
+                <ul>
+                    <li style="margin-bottom: 10px;">2단계 인증 설정을 위한 코드를 발급하였습니다.</li>
+                    <li>아래의 인증코드를 입력하시면 회원가입이 완료됩니다.</li>
+                </ul>
+            </div>
+            <div style="text-align: center; margin-top: 20px;">
+                <div style="display:inline-block; margin: 0 auto;">
+                    <img src="https://i.ibb.co/99DWynX/image.png" alt="" width="217px" height="180px" style="margin-top: 20px; display: block;">
+                </div>
             </div>
         </div>
     </body>
