chore : email template otp 상단 여백 제거

--- a/user/templates/user/email_template.html
+++ b/user/templates/user/email_template.html
@@ -9,7 +9,7 @@
         <div style="width: 700px; height: 740px; margin: 0 auto; padding: 30px; background-color: hsl(0, 0%, 100%); border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
             <h1 style="display: flex; justify-content: flex-start; padding: 0; border-bottom: 2px solid #eee;"><img src="https://i.ibb.co/WpQdqzP/logo.png" alt="" width="125px" height="45px" style="padding-bottom: 20px;"></h1>
             <h2 style="display: flex; justify-content: flex-start; padding: 0;">메일 인증 코드</h2>
-            <div style= "margin-top: 20px; border-top: 1px solid #eee; padding-top: 10px; text-align: center; background-color: #F8F6FF;">
+            <div style= "margin-top: 20px;  padding-top: 10px; text-align: center; background-color: #F8F6FF;">
             <p style="padding:20px 0; font-size: 50px; font-weight: 10px; color: #7D4FFF; letter-spacing: 20px;"> {{ otp }} </p>
             </div>
             <div style="margin-top: 60px; color: #575757; font-size: medium;"> Mudig에 가입하신 것을 환영합니다 !</div>
